Add special controller to allow certain endpoints to be available to admin users